tests/ui/coloring/direct_kernel_call.rx
//@ spec: RXS-0066
kernel fn k() {}

fn main() {
    k(); //~ ERROR RX3001
}
